<resources>
    <string name="app_name">pzCamera</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="watermark_txt">WaterMark</string>
    <string name="edit_description">TODO</string>
    <string name="options_description">TODO</string>
    <string name="watermark_description">TODO</string>
    <string name="toggle_description">TODO</string>

    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
